fixed so names with Å are cropped: #11246 (#12)
Can't find another way to do this, but it should be ok since its very specific to this component.

--- a/source/css/scss/objects/_header.scss
+++ b/source/css/scss/objects/_header.scss
@@ -324,6 +324,7 @@
 
     span {
       overflow: hidden !important;
+      line-height: 1.6;
       text-overflow: ellipsis;
     }
   }
